--- a/your-code/bonus.ipynb
+++ b/your-code/bonus.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>708</td>\n",
+       "      <td>Phantump</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>309</td>\n",
+       "      <td>43</td>\n",
+       "      <td>70</td>\n",
+       "      <td>48</td>\n",
+       "      <td>50</td>\n",
+       "      <td>60</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>65</td>\n",
+       "      <td>AlakazamMega Alakazam</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>590</td>\n",
+       "      <td>55</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>175</td>\n",
+       "      <td>95</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>460</td>\n",
+       "      <td>Abomasnow</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>494</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "      <td>75</td>\n",
+       "      <td>92</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>9</td>\n",
+       "      <td>BlastoiseMega Blastoise</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>630</td>\n",
+       "      <td>79</td>\n",
+       "      <td>103</td>\n",
+       "      <td>120</td>\n",
+       "      <td>135</td>\n",
+       "      <td>115</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>504</td>\n",
+       "      <td>Patrat</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>255</td>\n",
+       "      <td>45</td>\n",
+       "      <td>55</td>\n",
+       "      <td>39</td>\n",
+       "      <td>35</td>\n",
+       "      <td>39</td>\n",
+       "      <td>42</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>110</td>\n",
+       "      <td>Weezing</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>490</td>\n",
+       "      <td>65</td>\n",
+       "      <td>90</td>\n",
+       "      <td>120</td>\n",
+       "      <td>85</td>\n",
+       "      <td>70</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Kingler</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>475</td>\n",
+       "      <td>55</td>\n",
+       "      <td>130</td>\n",
+       "      <td>115</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>130</td>\n",
+       "      <td>111</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>623</th>\n",
+       "      <td>562</td>\n",
+       "      <td>Yamask</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>303</td>\n",
+       "      <td>38</td>\n",
+       "      <td>30</td>\n",
+       "      <td>85</td>\n",
+       "      <td>55</td>\n",
+       "      <td>65</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>251</td>\n",
+       "      <td>Celebi</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>600</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                       Name   Type 1  Type 2  Total   HP  Attack  \\\n",
+       "778  708                   Phantump    Ghost   Grass    309   43      70   \n",
+       "71    65      AlakazamMega Alakazam  Psychic     NaN    590   55      50   \n",
+       "510  460                  Abomasnow    Grass     Ice    494   90      92   \n",
+       "12     9    BlastoiseMega Blastoise    Water     NaN    630   79     103   \n",
+       "563  504                     Patrat   Normal     NaN    255   45      55   \n",
+       "118  110                    Weezing   Poison     NaN    490   65      90   \n",
+       "107   99                    Kingler    Water     NaN    475   55     130   \n",
+       "7      6  CharizardMega Charizard X     Fire  Dragon    634   78     130   \n",
+       "623  562                     Yamask    Ghost     NaN    303   38      30   \n",
+       "271  251                     Celebi  Psychic   Grass    600  100     100   \n",
+       "\n",
+       "     Defense  Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "778       48       50       60     38           6      False  \n",
+       "71        65      175       95    150           1      False  \n",
+       "510       75       92       85     60           4      False  \n",
+       "12       120      135      115     78           1      False  \n",
+       "563       39       35       39     42           5      False  \n",
+       "118      120       85       70     60           1      False  \n",
+       "107      115       50       50     75           1      False  \n",
+       "7        111      130       85    100           1      False  \n",
+       "623       85       55       65     30           5      False  \n",
+       "271      100      100      100    100           2      False  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
     "pokemon = pd.read_csv('../data/Pokemon.csv')\n",
     "\n",
-    "pokemon.head()"
+    "pokemon.sample(10)"
    ]
   },
   {
@@ -63,10 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy import stats\n",
+    "\n",
     "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
     "    \"\"\"Test means of a feature set of two samples\n",
     "    \n",
@@ -81,36 +315,47 @@
     "    results = {}\n",
     "\n",
     "    # Your code here\n",
+    "\n",
+    "    for feature in features:\n",
+    "        data1 = s1[feature].dropna()\n",
+    "        data2 = s2[feature].dropna()\n",
+    "\n",
+    "        t_stat, p_value = stats.ttest_ind(data1, data2, equal_var = False)\n",
+    "\n",
+    "        results[feature] = p_value\n",
     "    \n",
     "    return results"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using the `t_test_features` function, conduct t-test for Lengendary vs non-Legendary pokemons.\n",
-    "\n",
-    "*Hint: your output should look like below:*\n",
-    "\n",
-    "```\n",
-    "{'HP': 1.0026911708035284e-13,\n",
-    " 'Attack': 2.520372449236646e-16,\n",
-    " 'Defense': 4.8269984949193316e-11,\n",
-    " 'Sp. Atk': 1.5514614112239812e-21,\n",
-    " 'Sp. Def': 2.2949327864052826e-15,\n",
-    " 'Speed': 1.049016311882451e-18,\n",
-    " 'Total': 9.357954335957446e-47}\n",
-    " ```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.00029450942668019805,\n",
+       " 'Attack': 0.00019372974075130317,\n",
+       " 'Defense': 0.003515175355131006,\n",
+       " 'Sp. Atk': 6.036925647000889e-07,\n",
+       " 'Sp. Def': 0.00023770795747802992,\n",
+       " 'Speed': 3.3865981356130216e-08,\n",
+       " 'Total': 8.417507274268674e-14}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample1 = pokemon[pokemon['Legendary'] == True].sample(30)\n",
+    "sample2 = pokemon[pokemon['Legendary'] == False].sample(30)\n",
+    "\n",
+    "t_test_features(sample1, sample2)"
    ]
   },
   {
@@ -126,7 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# all p-values are low, so it means there are statistical differences between legendary and non-legendary pokemon"
    ]
   },
   {
@@ -138,11 +384,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.8061970517753202,\n",
+       " 'Attack': 0.6741167507118822,\n",
+       " 'Defense': 0.8169845713672941,\n",
+       " 'Sp. Atk': 0.18439603916840122,\n",
+       " 'Sp. Def': 0.0070510418128881544,\n",
+       " 'Speed': 0.5390749438867943,\n",
+       " 'Total': 0.25042577477781414}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample1 = pokemon[pokemon['Generation'] == 1].sample(30)\n",
+    "sample2 = pokemon[pokemon['Generation'] == 2].sample(30)\n",
+    "\n",
+    "t_test_features(sample1, sample2)"
    ]
   },
   {
@@ -158,7 +426,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "# all p-values are not below 0.05, so it means there is no statistical difference between first and second generation pokemon"
    ]
   },
   {
@@ -170,11 +440,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.487185583626787,\n",
+       " 'Attack': 0.0008863546785784968,\n",
+       " 'Defense': 0.0014020848319785835,\n",
+       " 'Sp. Atk': 0.24684175120820195,\n",
+       " 'Sp. Def': 0.006073785994169631,\n",
+       " 'Speed': 0.5045129433282234,\n",
+       " 'Total': 0.0014315949374409508}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample1 = pokemon[pokemon['Type 2'].notna()].sample(30)\n",
+    "sample2 = pokemon[pokemon['Type 2'].isna()].sample(30)\n",
+    "\n",
+    "t_test_features(sample1, sample2)"
    ]
   },
   {
@@ -190,7 +482,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "# The differences between Pokémon with one type and Pokémon with two types seem to be particularly relevant for Attack and Defense characteristics, as p-values indicate significant differences in more than one set of outcomes."
    ]
   },
   {
@@ -204,11 +498,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TtestResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05, df=799)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=0.853986188453353, pvalue=0.3933685997548122, df=799)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(stats.ttest_rel(pokemon['Attack'], pokemon['Defense']))\n",
+    "stats.ttest_rel(pokemon['Sp. Atk'], pokemon['Sp. Def'])\n"
    ]
   },
   {
@@ -224,13 +539,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "\n",
+    "# the p-value of attack and defense is less than 0.05 so it means that there are differences among all pokemon between these two features. In contrast, Sp. Atk and Sp. Def have a higher p-value so it does not reject the null hypothesis"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
