--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
-    "salaries = pd.read_csv('../Current_Employee_Names__Salaries__and_Position_Titles.csv')"
+    "salaries = pd.read_csv('../data/Current_Employee_Names__Salaries__and_Position_Titles.csv')"
    ]
   },
   {
@@ -57,11 +57,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16884    45.07\n",
+       "15212    32.09\n",
+       "2025     46.10\n",
+       "6616     35.60\n",
+       "20540    36.21\n",
+       "3382     17.55\n",
+       "32145     2.65\n",
+       "13204    36.21\n",
+       "31532    21.30\n",
+       "10674    37.25\n",
+       "14894    35.60\n",
+       "14095    35.60\n",
+       "14176    34.57\n",
+       "3282     13.00\n",
+       "32734    14.00\n",
+       "29521    13.94\n",
+       "6421     47.44\n",
+       "1877     19.38\n",
+       "8345     35.60\n",
+       "28796    21.98\n",
+       "27797    19.86\n",
+       "9068     35.60\n",
+       "11159    15.94\n",
+       "21028    40.20\n",
+       "8631     36.21\n",
+       "15205    48.85\n",
+       "31023     2.65\n",
+       "9603     16.17\n",
+       "18777    32.04\n",
+       "11304    46.35\n",
+       "19288    46.35\n",
+       "11852    35.60\n",
+       "5318     18.52\n",
+       "25817    17.68\n",
+       "20763    35.60\n",
+       "25378    36.22\n",
+       "31071    28.48\n",
+       "20936    47.44\n",
+       "5532     17.42\n",
+       "18828    14.51\n",
+       "27711    35.60\n",
+       "27193    45.07\n",
+       "19639    32.04\n",
+       "23636    36.13\n",
+       "27309    40.20\n",
+       "10312    46.10\n",
+       "30059     8.25\n",
+       "19606    35.60\n",
+       "19       46.10\n",
+       "27436    14.54\n",
+       "Name: Hourly Rate, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "salaries.head()\n",
+    "\n",
+    "sample = salaries[salaries['Hourly Rate'].notna()]['Hourly Rate'].sample(50)\n",
+    "\n",
+    "sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=0.1371366902480958, pvalue=0.8914846969868837, df=49)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "from scipy import stats\n",
+    "\n",
+    "stats.ttest_1samp(sample, 30)\n",
+    "\n",
+    "# with a sample size of 50 elements we cannot reject the null hypothesis this is because the p-value is greater than 0.05"
    ]
   },
   {
@@ -100,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
